# Athernex

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETE_SYSTEM_ANALYSIS.md  Dockerfile  FINAL_SUMMARY.md  INDEX.md  LANGUAGE_DETECTION_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SYSTEM_OVERVIEW.md  SYSTEM_STATUS.md  VERIFICATION_REPORT.md  VYAPAARSETU_IMPLEMENTATION_COMPLETE.md  VYAPAARSETU_SETUP_GUIDE.md  app.py  app_exotel.py  check_twilio.py  docker-compose.yml  extended_routes.py  language_detector.py  make_test_call.py  models.py  order_voice_flow.py  pyproject.toml  requirements.txt  start.bat  start.sh  test_components.py  test_extended_system.py  test_language_detection.py  test_web_interface.html
.kiro/specs/ai-voice-order-confirmation-system/: .config.kiro  design.md  requirements.md  tasks.md
scripts/: init_db.py
src/: __init__.py  main.py
src/config/: system_config.py
src/event_bus/: __init__.py  event_bus.py
src/modules/audio/: __init__.py  audio_processor.py
src/modules/call_controller/: __init__.py  call_controller.py
src/modules/llm/: llm_module.py
src/modules/logger/: __init__.py  logger_module.py
src/modules/session_store/: __init__.py  session_store.py
src/modules/state/: __init__.py  state_machine.py
src/modules/stt/: __init__.py  stt_module.py
src/modules/telephony/: __init__.py  telephony_module.py
src/storage/: __init__.py  s3_client.py
vyapaarsetu-dashboard/: .env.local  CSS_STATUS.md  index.html  package-lock.json  package.json  tailwind.config.js
vyapaarsetu-dashboard/src/: App.tsx  index.css  main.tsx
(+15 files in other folders)
